added the eyeball space, also changed the Tile area need in other classes... class will be deleted soon